[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
common = { path = "../common" }
driver = { path = "../driver" }
generator = { path = "../generator" }
simulator = { path = "../simulator" }
state_estimator = { path = "../state_estimator" }
num = "0.4"
bytemuck = "1"
