[package]
name = "sho"
version = "0.1.0"
edition = "2021"

[dependencies]
async-rayon = "0.1.0"
color-eyre = "0.6.3"
common = { path = "../common" }
futures = "0.3"
rayon = "1.10.0"
num = "*"
bytemuck = "1"
pyo3 = { version ="0.22", features = ["abi3-py312"]}
coordinator = { path = "../coordinator" }
smol = "2"
